[package]
name = "smash"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tap"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
prost = "0.13"
tracing-unwrap = "1.0.1"
crc = "3.2.1"

[build-dependencies]
prost-build = "0.13"
