[package]
name = "smash"
version = "0.1.0"
edition = "2021"

[[example]]
name = "tap"

[dependencies]
impl_macro = { path = "impl_macro" }
serde = { version = "1.0.209", features = ["derive"] }
serde_yml = "0.0.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing-unwrap = "1.0.1"
crc = "3.2.1"
bincode = "1.3.3"

[build-dependencies]
prost-build = "0.13"

[target."cfg(target_os = \"hermit\")".dependencies]
hermit = "0.9.1"
